Widget theme: really fix comboxbox entry buttons borders.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1138,6 +1138,10 @@ GtkComboBox.combobox-entry .button:first-child,
 GtkComboBox.combobox-entry .button:focus:first-child,
 GtkComboBox.combobox-entry .button:active:first-child,
 GtkComboBox.combobox-entry .button:insensitive:first-child,
+GtkComboBox.combobox-entry .button:active:first-child,
+GtkComboBox.combobox-entry .button:active:hover:first-child,
+GtkComboBox.combobox-entry .button:active:focus:first-child,
+GtkComboBox.combobox-entry .button:active:hover:focus:first-child,
 GtkComboBox.combobox-entry .button:window-unfocused:first-child {
     border-image-width: 3 0 4 3;
     border-radius: 3 0 0 3;
@@ -1151,6 +1155,9 @@ GtkComboBox.combobox-entry .button:last-child,
 GtkComboBox.combobox-entry .button:focus:last-child,
 GtkComboBox.combobox-entry .button:insensitive:last-child,
 GtkComboBox.combobox-entry .button:active:last-child,
+GtkComboBox.combobox-entry .button:active:hover:last-child,
+GtkComboBox.combobox-entry .button:active:focus:last-child,
+GtkComboBox.combobox-entry .button:active:hover:focus:last-child,
 GtkComboBox.combobox-entry .button:window-unfocused:last-child {
     border-image-width: 3 3 4 0;
     border-radius: 0 3 3 0;
@@ -1162,6 +1169,9 @@ GtkComboBox.combobox-entry .button:window-unfocused:last-child {
 .primary-toolbar GtkComboBox.combobox-entry .button:first-child,
 .primary-toolbar GtkComboBox.combobox-entry .button:hover:first-child,
 .primary-toolbar GtkComboBox.combobox-entry .button:active:first-child,
+.primary-toolbar GtkComboBox.combobox-entry .button:active:hover:first-child,
+.primary-toolbar GtkComboBox.combobox-entry .button:active:focus:first-child,
+.primary-toolbar GtkComboBox.combobox-entry .button:active:hover:focus:first-child,
 .primary-toolbar GtkComboBox.combobox-entry .button:focus:first-child,
 .primary-toolbar GtkComboBox.combobox-entry .button:insensitive:first-child {
     border-image-width: 4 0 4 4;
@@ -1174,6 +1184,9 @@ GtkComboBox.combobox-entry .button:window-unfocused:last-child {
 .primary-toolbar GtkComboBox.combobox-entry .button:last-child,
 .primary-toolbar GtkComboBox.combobox-entry .button:hover:last-child,
 .primary-toolbar GtkComboBox.combobox-entry .button:active:last-child,
+.primary-toolbar GtkComboBox.combobox-entry .button:active:hover:last-child,
+.primary-toolbar GtkComboBox.combobox-entry .button:active:focus:last-child,
+.primary-toolbar GtkComboBox.combobox-entry .button:active:hover:focus:last-child,
 .primary-toolbar GtkComboBox.combobox-entry .button:focus:last-child,
 .primary-toolbar GtkComboBox.combobox-entry .button:insensitive:last-child {
     border-image-width: 4 4 4 0;
