--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders.css
@@ -5,6 +5,8 @@
 GtkComboBox.combobox-entry .entry,
 GtkComboBox.combobox-entry .button,
 GtkComboBox.combobox-entry .button:focus,
+GtkComboBox.combobox-entry .button:active,
+GtkComboBox.combobox-entry .button:focus:active,
 .button:active,
 .button:active:hover,
 .button:insensitive,
@@ -51,6 +53,9 @@ GtkSwitch.trough:active {
 .primary-toolbar GtkComboBox.combobox-entry .button,
 .primary-toolbar GtkComboBox.combobox-entry .button:hover,
 .primary-toolbar GtkComboBox.combobox-entry .button:active,
+.primary-toolbar GtkComboBox.combobox-entry .button:active:focus,
+.primary-toolbar GtkComboBox.combobox-entry .button:active:hover,
+.primary-toolbar GtkComboBox.combobox-entry .button:active:hover:focus,
 .primary-toolbar GtkComboBox.combobox-entry .button:focus,
 .primary-toolbar GtkComboBox.combobox-entry .button:insensitive,
 .primary-toolbar .button:active,
