--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -17,7 +17,7 @@
 @define-color theme_unfocused_selected_fg_color @theme_selected_fg_color; /* FIXME */
 @define-color unfocused_button_background @theme_unfocused_bg_color;
 @define-color unfocused_borders mix(@theme_unfocused_bg_color, @theme_text_color, 0.15);
-@define-color unfocused_insensitive_borders_color mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
+@define-color unfocused_insensitive_borders mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
 @define-color unfocused_insensitive_fg_color mix(@insensitive_fg_color, @insensitive_bg_color, 0.3);
 @define-color unfocused_insensitive_bg_color @insensitive_bg_color;
 @define-color unfocused_dark_bg mix(@theme_unfocused_bg_color, @borders, 0.5);
@@ -56,7 +56,7 @@
 
 @define-color insensitive_fg_color #535555;
 @define-color insensitive_bg_color mix(@theme_bg_color, @theme_base_color, 0.6);
-@define-color insensitive_border_color #535555;
+@define-color insensitive_borders #535555;
 
 @define-color inactive_frame_color shade (@theme_bg_color, 0.8);
 
@@ -124,7 +124,7 @@
 
 @define-color treeview_focus_border shade (@theme_selected_bg_color, 1.20);
 
-@define-color scale_fill shade (@insensitive_border_color, 0.90);
+@define-color scale_fill shade (@insensitive_borders, 0.90);
 @define-color scale_border_a shade (@internal_element_color, 0.90);
 @define-color scale_border_b shade (@internal_element_color, 0.65);
 
