--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -77,7 +77,7 @@ GtkWindow:window-unfocused {
 *:insensitive {
     background-color: @insensitive_bg_color;
     color: @insensitive_fg_color;
-    border-color: @insensitive_border_color;
+    border-color: @insensitive_borders;
 }
 
 /*
@@ -158,7 +158,7 @@ GtkTreeView .separator,
 GtkTreeView .separator:window-unfocused,
 .separator:window-unfocused,
 .separator:hover:window-unfocused {
-    color: @unfocused_insensitive_borders_color;
+    color: @unfocused_insensitive_borders;
 }
 
 .pane-separator {
@@ -195,11 +195,11 @@ GtkTreeView .separator:window-unfocused,
  ****************/
 .entry {
     border-style: solid;
-    padding: 0;
 
     /* we use inner-border instead of padding because padding
      * also applies to the progressbar.
      */
+    padding: 0;
 
     -GtkEntry-inner-border: 5;
     -GtkEntry-progress-border: 0;
@@ -442,7 +442,7 @@ GtkScale.trough:window-unfocused {
 
 GtkScale.trough:insensitive {
     background-color: @insensitive_bg_color;
-    border-color: @insensitive_border_color;
+    border-color: @insensitive_borders;
     box-shadow: none;
     background-image: none;
 }
@@ -480,7 +480,7 @@ GtkScale.trough:window-unfocused {
 
 GtkScale.trough:insensitive:window-unfocused {
     background-color: @unfocused_insensitive_bg_color;
-    border-color: @unfocused_insensitive_borders_color;
+    border-color: @unfocused_insensitive_borders;
     box-shadow: none;
     background-image: none;
 }
@@ -673,7 +673,7 @@ GtkComboBox.combobox-entry .button {
 .primary-toolbar .raised.linked .button:insensitive:window-unfocused,
 .inline-toolbar.toolbar .button:insensitive:window-unfocused,
 .inline-toolbar.toolbar GtkToolButton .button:insensitive:window-unfocused {
-    box-shadow: -1 0 inset @unfocused_insensitive_borders_color;
+    box-shadow: -1 0 inset @unfocused_insensitive_borders;
 }
 
 .linked .button:insensitive:last-child:window-unfocused,
@@ -1008,7 +1008,7 @@ GtkLinkButton * {
 .notebook tab:window-unfocused {
     background-image: none;
     background-color: @theme_unfocused_bg_color;
-    border-color: @unfocused_insensitive_borders_color;
+    border-color: @unfocused_insensitive_borders;
 }
 
 .notebook tab:active {
@@ -1706,7 +1706,7 @@ GtkSwitch.trough:active {
 GtkSwitch.trough:insensitive {
     background-image: none;
     background-color: @insensitive_bg_color;
-    color: mix(@insensitive_bg_color, @insensitive_fg_color, 0.5);
+    color: mix(@insensitive_bg_color, @insensitive_fg_color, 0.5); /* FIXME */
 }
 
 GtkSwitch.trough:window-unfocused {
@@ -1718,7 +1718,7 @@ GtkSwitch.trough:active:window-unfocused {
 }
 
 GtkSwitch.trough:insensitive:window-unfocused {
-    color: @unfocused_insensitive_borders_color;
+    color: @unfocused_insensitive_borders;
 }
 
 GtkSwitch.slider {
@@ -1765,7 +1765,7 @@ GtkSwitch.slider:window-unfocused {
 
 GtkSwitch.slider:insensitive:window-unfocused {
     background-color: @theme_unfocused_bg_color;
-    border-color: @unfocused_insensitive_borders_color;
+    border-color: @unfocused_insensitive_borders;
 }
 
 GtkViewport,
