Widget theme: new scrollbar design.

--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -120,7 +120,12 @@
 @define-color trough_bg_color_a #30312f;
 @define-color trough_bg_color_b #41433f;
 
-@define-color scrollbar_trough_color #414141;
+@define-color scrollbar_trough shade(@theme_bg_color, 1.2);
+@define-color scrollbar_trough_insensitive shade(@theme_bg_color, 1.05); /* FIXME */
+@define-color scrollbar_slider mix(@scrollbar_trough, @theme_fg_color, 0.15);
+@define-color scrollbar_slider_prelight mix(@scrollbar_trough, @theme_fg_color, 0.3);
+@define-color scrollbar_slider_active @theme_selected_bg_color;
+@define-color scrollbar_slider_insensitive @insensitive_bg_color; /* FIXME */
 
 @define-color treeview_focus_border shade (@theme_selected_bg_color, 1.20);
 
