Widget theme: correct selected fg color for unfocused windows.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -64,14 +64,16 @@ GtkWindow:window-unfocused {
     color: @theme_fg_color;
 }*/
 
-*:selected {
+
+*:selected,
+*:selected:focus {
     background-color: @theme_selected_bg_color;
     color: @theme_selected_fg_color;
 }
 
-*:selected:focus {
-    background-color: @theme_selected_bg_color;
-    color: @theme_selected_fg_color;
+*:selected:window-unfocused {
+    background-color: @theme_unfocused_selected_bg_color;
+    color: @theme_unfocused_selected_fg_color;
 }
 
 *:insensitive {
