--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -27,7 +27,7 @@
 @define-color theme_unfocused_fg_color #a7aba7;
 @define-color theme_unfocused_bg_color @theme_bg_color; /* FIXME */
 @define-color theme_unfocused_selected_bg_color darker(@theme_selected_bg_color);
-@define-color theme_unfocused_selected_fg_color @theme_selected_fg_color; /* FIXME */
+@define-color theme_unfocused_selected_fg_color @theme_unfocused_base_color; /* FIXME */
 @define-color unfocused_button_background @theme_unfocused_bg_color;
 @define-color unfocused_borders @borders;
 @define-color unfocused_insensitive_borders_color mix(@theme_unfocused_bg_color, @unfocused_borders, 0.5);
