--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -4,7 +4,6 @@
 
     background-clip: padding-box;
 
-    /* Style properties */
     -GtkToolButton-icon-spacing: 4;
 
     -GtkTextView-error-underline-color: @error_color;
@@ -1257,6 +1256,31 @@ GtkComboBox .button *:hover {
     border-image: none;
 }
 
+.scrollbar.trough:insensitive {
+    background-color: @scrollbar_trough_insensitive;
+    border-style: solid;
+    border-image: none;
+    border-color: transparent;
+    border-width: 3;
+}
+
+.scrollbar.trough:window-unfocused {
+    background-image: none;
+    background-color: @scrollbar_trough_unfocused;
+    border-width: 0;
+    border-radius: 0;
+    border-image: none;
+}
+
+.scrollbar.trough:insensitive:window-unfocused {
+    background-image: none;
+    background-color: mix(@scrollbar_trough_unfocused, @scrollbar_trough_insensitive, 0.5);
+    border-width: 0;
+    border-radius: 0;
+    border-image: none;
+}
+
+
 .scrollbar.slider {
     background-image: none;
     background-color: @scrollbar_slider;
@@ -1288,14 +1312,6 @@ GtkComboBox .button *:hover {
 
 .scrollbar.slider:insensitive {
     background-color: @scrollbar_slider_insensitive;
-    border-style: solid;
-    border-image: none;
-    border-color: transparent;
-    border-width: 3;
-}
-
-.scrollbar.trough:insensitive {
-    background-color: @scrollbar_trough_insensitive;
     border-style: solid;
     border-image: none;
     border-color: transparent;
