Widget theme: fix spinbuttons wrt latest gtk+ changes.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
@@ -164,6 +164,7 @@ GtkComboBox.combobox-entry .button:hover:focus,
 GtkComboBox.combobox-entry .button:active,
 GtkComboBox.combobox-entry .button:active:focus,
 .spinbutton .button:active,
+.spinbutton .button:active:focus,
 .spinbutton .button:active:hover,
 column-header.button:active,
 column-header .button:active,
