--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -241,37 +241,26 @@ GtkTreeView .separator:window-unfocused,
 .spinbutton .button {
     color: @internal_element_color;
     padding: 2 6;
+    border-width: 0;
+    border-radius: 0;
+    border-style: none;
+    border-image: none;
+    box-shadow: 1 0 inset @inset_dark_color;
 }
 
-.spinbutton .button,
-.spinbutton .button:hover,
 .spinbutton .button:active,
 .spinbutton .button:focus,
+.spinbutton .button:active:focus,
 .spinbutton .button:insensitive,
 .spinbutton .button:window-unfocused {
-    border-width: 0 1;
-    border-radius: 0;
-    border-style: solid;
     border-image: none;
-
-    box-shadow: none;
-}
-
-.spinbutton .button,
-.spinbutton .button:hover,
-.spinbutton .button:active,
-.spinbutton .button:focus,
-.spinbutton .button:insensitive {
-    border-color: @inset_dark_color;
-}
-
-.spinbutton .button:window-unfocused {
-    border-color:  @inset_dark_color; /* FIXME */
+    border-radius: 0;
 }
 
 .spinbutton .button,
 .spinbutton .button:hover,
 .spinbutton .button:focus,
+.spinbutton .button:focus:hover,
 .spinbutton .button:insensitive,
 .spinbutton .button:window-unfocused {
     background-color: transparent;
@@ -283,6 +272,7 @@ GtkTreeView .separator:window-unfocused,
 }
 
 .spinbutton .button:active,
+.spinbutton .button:active:focus,
 .spinbutton .button:hover {
     color: @internal_element_prelight;
 }
@@ -291,33 +281,37 @@ GtkTreeView .separator:window-unfocused,
 .spinbutton .button:first-child:hover,
 .spinbutton .button:first-child:active,
 .spinbutton .button:first-child:focus,
+.spinbutton .button:first-child:active:focus,
 .spinbutton .button:first-child:insensitive,
 .spinbutton .button:first-child:window-unfocused {
-    border-left-width: 0;
     border-radius: 2 0 0 2;
+    box-shadow: none;
 }
 
 .spinbutton .button:last-child,
 .spinbutton .button:last-child:hover,
 .spinbutton .button:last-child:active,
 .spinbutton .button:last-child:focus,
+.spinbutton .button:last-child:active:focus,
 .spinbutton .button:last-child:insensitive,
 .spinbutton .button:last-child:window-unfocused {
-    border-width: 0;
     border-radius: 0 2 2 0;
 }
 
 /* Add back the glowy effect from the entry covered by the pushed button background*/
-.spinbutton .button:active {
-    box-shadow: 0 1 inset alpha(@theme_selected_bg_color, 0.2), 0 -1 inset alpha(@theme_selected_bg_color, 0.2);
+.spinbutton .button:active,
+.spinbutton .button:active:focus {
+    box-shadow: 1 0 inset @inset_dark_color, 0 1 inset alpha(@theme_selected_bg_color, 0.2), 0 -1 inset alpha(@theme_selected_bg_color, 0.2);
 }
 
-.spinbutton .button:first-child:active {
+.spinbutton .button:first-child:active,
+.spinbutton .button:first-child:active:focus {
     box-shadow: 1 1 inset alpha(@theme_selected_bg_color, 0.2), 0 -1 inset alpha(@theme_selected_bg_color, 0.2);
 }
 
-.spinbutton .button:last-child:active {
-    box-shadow: 0 1 inset alpha(@theme_selected_bg_color, 0.2), -1 -1 inset alpha(@theme_selected_bg_color, 0.2);
+.spinbutton .button:last-child:active,
+.spinbutton .button:last-child:active:focus {
+    box-shadow: 1 0 inset @inset_dark_color, 0 1 inset alpha(@theme_selected_bg_color, 0.2), -1 -1 inset alpha(@theme_selected_bg_color, 0.2);
 }
 
 
