--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -134,7 +134,8 @@
 
 @define-color internal_element_color #888a85;
 @define-color internal_element_prelight @theme_text_color;
-@define-color internal_element_insensitive shade (@internal_element_color, 1.7);
+/*@define-color internal_element_insensitive shade (@internal_element_color, 1.7);*/
+@define-color internal_element_insensitive mix(@internal_element_color, @theme_base_color, 0.7);
 
 @define-color scale_fill @insensitive_borders;
 @define-color scale_border_a @internal_element_color;
