Widget theme: fixed insensitive scale slider with marks below.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
@@ -259,6 +259,10 @@ GtkScale.scale-has-marks-below.slider.horizontal:window-unfocused {
     background-image: url("assets/scale-slider-marks-below-horizontal-unfocused.svg");
 }
 
+GtkScale.scale-has-marks-below.slider.horizontal:insensitive {
+    background-image: url("assets/scale-slider-marks-below-horizontal-insensitive.svg");
+}
+
 GtkScale.scale-has-marks-below.slider.horizontal:insensitive:window-unfocused {
     background-image: url("assets/scale-slider-marks-below-horizontal-insensitive-unfocused.svg");
 }
