--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1961,12 +1961,12 @@ GtkCalendar.header {
     border-width: 0;
 }
 
-GtkCalendar.button {
-    background-image: -gtk-gradient (linear,
-                                     left top,
-                                     left bottom,
-                                     from (rgba (0, 0, 0, 0)),
-                                     to (rgba (0, 0, 0, 0)));
+GtkCalendar.button,
+GtkCalendar.button:insensitive,
+GtkCalendar.button:window-unfocused,
+GtkCalendar.button:insensitive:window-unfocused {
+    background-image: none;
+    background-color: none;
 }
 
 .highlight,
