Dark theme: fix column-hedaers last child for window unfocused, some scrollbars tweakings.

--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -126,8 +126,8 @@
 @define-color scrollbar_slider mix(@scrollbar_trough, @theme_fg_color, 0.15);
 @define-color scrollbar_slider_prelight mix(@scrollbar_trough, @theme_fg_color, 0.3);
 @define-color scrollbar_slider_active @theme_selected_bg_color;
-@define-color scrollbar_slider_insensitive @insensitive_bg_color; /* FIXME */
-@define-color scrollbar_slider_unfocused mix(@scrollbar_trough_unfocused, @theme_unfocused_fg_color, 0.15);
+@define-color scrollbar_slider_insensitive alpha(black, 0); /* FIXME should be transparent */
+@define-color scrollbar_slider_unfocused shade(@theme_unfocused_base_color, 0.8);
 
 @define-color treeview_focus_border shade (@theme_selected_bg_color, 1.20);
 
