--- a/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
@@ -9,10 +9,9 @@
     background-image: -gtk-gradient (linear,
 				     left top, left bottom,
                                      from (@button_gradient_color_a),
-                                     color-stop (0.2, @button_gradient_color_a),
-                                     color-stop (0.8, @button_gradient_color_b),
                                      to (@button_gradient_color_b));
-   background-color: transparent;
+
+    background-color: transparent;
 }
 
 /* Pushed button background */
@@ -36,6 +35,14 @@
     background-color: transparent; 
 }
 
+/* Flipped pushed button background for vertical progressbar through and the like */
+.trough.vertical {
+    background-image: -gtk-gradient (linear,
+    				     left top, right top,
+                                     from (@borders),
+				     to (shade(@theme_bg_color, 0.95)));
+}
+
 /* Primary and inline toolbars pushed button background */
 .primary-toolbar .button:active,
 .primary-toolbar .button:active:hover,
@@ -50,14 +57,6 @@
                                      from (shade(@borders, 0.95)),
 				     to (shade(@theme_bg_color, 0.88)));
     background-color: transparent;
-}
-
-/* Flipped pushed button background for vertical progressbar through and the like */
-.trough.vertical {
-    background-image: -gtk-gradient (linear,
-    				     left top, right top,
-                                     from (@borders),
-				     to (shade(@theme_bg_color, 0.95)));
 }
 
 /* Prelit button background */
@@ -83,9 +82,9 @@
     background-color: transparent;
     background-image: -gtk-gradient (linear,
 				     left top, left bottom,
-				     from (alpha (@theme_base_color, 0.0)),
-				     color-stop (0.54, alpha (shade (@theme_base_color, 0.92), 0.49)),
-			             to (alpha (@theme_base_color, 0.0)));
+				     from (alpha (@toolbar_button_prelight, 0)),
+				     color-stop (0.54, @toolbar_button_prelight),
+			             to (alpha (@toolbar_button_prelight, 0)));
 }
 
 /* Insensitive button background */
@@ -153,12 +152,12 @@ GtkComboBox.combobox-entry .button:hover:focus,
     background-image: -gtk-gradient(linear,
                                     left top, left bottom,
                                     from(@entry_background_a),
-                                    color-stop(0.20, @entry_background_b),
+                                    color-stop(0.15, @entry_background_b),
                                     color-stop(0.85, @entry_background_c),
                                     to(@entry_background_d));
 }
 
-/* ComboboxEntry pushed button background */
+/* Entry pushed button background */
 .primary-toolbar GtkComboBox.combobox-entry .button:active,
 .primary-toolbar GtkComboBox.combobox-entry .button:hover:active,
 GtkComboBox.combobox-entry .button:active,
@@ -212,13 +211,19 @@ GtkComboBox.combobox-entry .button:insensitive:window-unfocused {
 .primary-toolbar.toolbar,
 .inline-toolbar.toolbar  {
     background-color: transparent;
-    background-image: -gtk-gradient (linear,
+/*   background-image: -gtk-gradient (linear,
 				     left top,
 				     left bottom,
 				     from (@toolbar_gradient_base),
 				     color-stop (0.16, @toolbar_gradient_step1),
 				     color-stop (0.90, @toolbar_gradient_step2),
-				     to (@toolbar_gradient_final));
+				     to (@toolbar_gradient_final));*/
+   background-image: -gtk-gradient (linear,
+				     left top,
+				     left bottom,
+				     from (@toolbar_gradient_a),
+				     color-stop (0.50, @toolbar_gradient_b),
+				     to (@toolbar_gradient_c));
 }
 
 /* Unfocused window primary and inline toolbars background */
