--- a/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-dark-overrides.css
@@ -105,3 +105,8 @@ GtkSwitch.slider {
 .scrollbar.trough.horizontal {
     box-shadow: none;
 }
+
+.primary-toolbar .toolbar,
+.primary-toolbar.toolbar {
+    box-shadow: 0 3 inset alpha(black, 0.05), 0 2 inset alpha(black, 0.05), 0 1 inset alpha(black, 0.05);
+}
