--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -77,8 +77,8 @@
 @define-color focused_entry_border #579eea;
 @define-color focused_entry_inset alpha (#d7e4f1, 0.50);
 
-@define-color button_gradient_color_a #f4f6f4;
-@define-color button_gradient_color_b #d7dad7;
+@define-color button_gradient_color_a shade(@theme_bg_color, 1.05);
+@define-color button_gradient_color_b shade(@theme_bg_color, 0.94);
 @define-color borders #a7aba7;
 
 @define-color button_active_gradient_color_a #a2a9a2;
@@ -153,13 +153,24 @@
 @define-color notebook_tab_gradient_a shade(@theme_bg_color, 1.05);
 @define-color notebook_tab_gradient_b @theme_bg_color;
 
-@define-color toolbar_gradient_base #aaaa9e;
+/*@define-color toolbar_gradient_base #aaaa9e;
 @define-color toolbar_gradient_step1 #bcbcb4;
 @define-color toolbar_gradient_step2 #d9d9d7;
-@define-color toolbar_gradient_final #e5e5e2;
+@define-color toolbar_gradient_final #e5e5e2;*/
 
-@define-color toolbar_border_top shade (@theme_bg_color, 0.56);
-@define-color toolbar_border_bottom shade (@theme_bg_color, 0.83);
+/*@define-color toolbar_gradient_base shade(@toolbar_gradient_step2, 0.9);
+@define-color toolbar_gradient_step1 shade(@toolbar_gradient_step2, 0.95);
+@define-color toolbar_gradient_step2 #babdb6;
+@define-color toolbar_gradient_final shade(@toolbar_gradient_step2, 1.15);*/
+
+@define-color toolbar_gradient_a shade(@borders, 1.15);
+@define-color toolbar_gradient_b shade(@borders, 1.25);
+@define-color toolbar_gradient_c shade(@borders, 1.3);
+
+@define-color toolbar_border_top shade(@borders, 0.9); /*shade (@theme_bg_color, 0.7);*/
+@define-color toolbar_border_bottom shade(@borders, 1.1); /*shade (@theme_bg_color, 0.7);*/
+
+@define-color toolbar_button_prelight alpha(white, 0.4);
 
 @define-color toolbar_active_button_color #909081;
 
