--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -66,6 +66,7 @@
 
 @define-color notebook_tab_gradient_a shade(@theme_bg_color, 0.8);
 @define-color notebook_tab_gradient_b shade(@theme_bg_color, 0.75);
+@define-color notebook_tab_hilight shade(@theme_bg_color, 0.9);
 
 @define-color switch_slider_color shade(@theme_bg_color, 0.9);
 @define-color switch_slider_active_border shade(@switch_trough_active_bg_a, 0.60);
