--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -151,8 +151,9 @@
 @define-color notebook_active_tab_border #1372d3;
 @define-color notebook_selected_tab_color #8dc0f3;
 
-@define-color notebook_tab_gradient_a shade(@theme_bg_color, 1.05);
-@define-color notebook_tab_gradient_b @theme_bg_color;
+@define-color notebook_tab_gradient_a shade(@theme_bg_color, 0.98);
+@define-color notebook_tab_gradient_b shade(@theme_bg_color, 0.93);
+@define-color notebook_tab_hilight shade(@theme_bg_color, 1.02);
 
 /*@define-color toolbar_gradient_base #aaaa9e;
 @define-color toolbar_gradient_step1 #bcbcb4;
